@@ -147,6 +147,12 @@ task migratePostgresDatabase(type: org.flywaydb.gradle.task.FlywayMigrateTask) {
     }
 }
 
+task fortifyScan(type: JavaExec)  {
+  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+}
+
 jacoco {
     toolVersion = "0.8.5"
 }
@@ -346,6 +352,7 @@ dependencies {
     testImplementation group: 'org.apache.camel', name: 'camel-test-junit5', version: versions.camel
     testImplementation group: 'org.testcontainers', name: 'postgresql', version: '1.15.1'
     testImplementation group: 'org.postgresql', name: 'postgresql', version: '42.2.8'
+    testCompile 'com.github.hmcts:fortify-client:1.2.0:all'
 
     testImplementation(group: 'org.yaml', name: 'snakeyaml') {
         version {
